--- a/front/src/App.css
+++ b/front/src/App.css
@@ -28,3 +28,32 @@
 
 
 } */
+
+#button-hold{
+  height: 100px;
+  min-height: 20px;
+}
+
+#button-hold{
+  height: 100px;
+  min-height: 20px;
+}
+
+#graph-display{
+  
+  outline:none;
+  border:black !important;
+}
+#graph-display > {border:blue;outline:none};
+
+
+canvas{
+  outline:black;
+  border:black;
+}
+.vis-network{
+
+  outline:black;
+  border: black,
+}
+
