Process raw user input, preprocess for API

--- a/front/src/Run.css
+++ b/front/src/Run.css
@@ -16,10 +16,10 @@
     outline:none;
     }
 
-
+/* 
 #nav-header{
-     /* display:flex     */
-}
+     display:flex    
+} */
 #add_row_button{
     float: center;
 }
