added import button, created Popups with versatile component to display error messages for importation and non-valid DFA

--- a/front/src/Run.css
+++ b/front/src/Run.css
@@ -15,7 +15,12 @@
 #add_button:focus{
     outline:none;
     }
-
+#import_json{
+    box-shadow: none;
+}
+#export_xmljson{
+    box-shadow: none;
+}
 /* 
 #nav-header{
      display:flex    
