--- a/front/src/Run.css
+++ b/front/src/Run.css
@@ -15,11 +15,16 @@
 #add_button:focus{
     outline:none;
     }
-
-
-#nav-header{
-     /* display:flex     */
+#import_json{
+    box-shadow: none;
 }
+#export_xmljson{
+    box-shadow: none;
+}
+/* 
+#nav-header{
+     display:flex    
+} */
 #add_row_button{
     float: center;
 }
