--- a/front/src/HeaderMenu.css
+++ b/front/src/HeaderMenu.css
@@ -6,7 +6,7 @@
 
 }
 .nav-dropdown-text{
-    color:#FFD700;
+    /* color:#FFD700; */
 
     /* font-weight: bold;
     text-emphasis: bold; */
@@ -16,3 +16,11 @@
 /* #logo_text{
 
 } */
+
+
+.dropdown-nav-item{
+    color:red !important;
+}
+nav-link{
+    color:red;
+}
