--- a/front/src/Visual.css
+++ b/front/src/Visual.css
@@ -61,16 +61,22 @@ canvas{
     /* position: absolute; */
 
 }
-#trash_button{
+#trash_button,#add_button_image, #trash_button_image{
  /* float:right; */
  outline:none;
+
+}
+#add_button{
+    position: relative;
+    top: .65em;
+    left: -.83em;
+    outline:none;
 
 }
 #trash_button_input{
     position: relative;
     top: .7em;
-    left: -1em;
+    left: -2.3em;
     outline:none;
-
-
 }
+
