css and depreciated code removal

--- a/front/src/HeaderMenu.css
+++ b/front/src/HeaderMenu.css
@@ -17,10 +17,6 @@
 
 } */
 
-
-.dropdown-nav-item{
-    color:red !important;
-}
-nav-link{
-    color:red;
+a.nav-link{
+    color:yellow !important;
 }
