Frontend/state bug fixes (#27)
* Mark accepting and finite automataton bug fix

* fixed api call to reflect mistake that API document wasn't accepted-determnism etc ...

* removed import button

* bug fixes

* comma bug fixes and current DFA/NFA best functionality

* hot fixes prior to mccharthy meeting

* url string change

* change populating of new states to static button

* css and depreciated code removal

* commenting out of import json functionality and depreciation

* added popup export for UIN id's

* restyling and state button fixes

* state button fix

* new theme

* url change

* url fix

--- a/front/src/Visual.css
+++ b/front/src/Visual.css
@@ -7,16 +7,17 @@
 }
 
 #graph-display{
-    
+        
     outline:none;
     border:black !important;
 }
-#graph-display > {border:blue;outline:none};
+#graph-display > {outline:none};
 
 
 canvas{
     outline:black;
     border:black;
+
 }
 .vis-network{
 
@@ -61,16 +62,22 @@ canvas{
     /* position: absolute; */
 
 }
-#trash_button{
+#trash_button,#add_button_image, #trash_button_image{
  /* float:right; */
  outline:none;
+
+}
+#add_button_visual{
+    position: relative;
+    top: .65em;
+    left: -.83em;
+    outline:none;
 
 }
 #trash_button_input{
     position: relative;
     top: .7em;
-    left: -1em;
+    left: -2.3em;
     outline:none;
-
-
 }
+
