--- a/front/src/HeaderMenu.css
+++ b/front/src/HeaderMenu.css
@@ -1,12 +1,14 @@
 #nav-header{
     font-weight: bold !important;
-    color:#FFD700 !important;
+    /* color:#FFD700 !important; */
     border-bottom-style: solid;
     border-width: 5px;
+    color: #e25b4b  !important;
+    background-color: #ecfdff !important;
 
 }
 .nav-dropdown-text{
-    color:#FFD700;
+    /* color:#FFD700; */
 
     /* font-weight: bold;
     text-emphasis: bold; */
@@ -16,3 +18,7 @@
 /* #logo_text{
 
 } */
+
+a.nav-link{
+    color: #e25b4b !important;
+}
