button addition prior to click functionality for Definition of CFG module

--- a/front/src/CFG_Visual.css
+++ b/front/src/CFG_Visual.css
@@ -1,3 +1,11 @@
 #row_container_CFG{
     margin-top: 10px;
 }
+/* 
+.inline{
+    display: inline-block;
+} */
+
+.header-with-button{
+    /* float:right; */
+}
