refactored plus button to save previous state of text inputted by the user

--- a/front/src/CFG_Visual.css
+++ b/front/src/CFG_Visual.css
@@ -9,3 +9,13 @@
 .header-with-button{
     /* float:right; */
 }
+
+/* .definition_div{
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 0;
+
+} */
+#row-container-form{
+    /* padding-bottom: 1px; */
+}
