Frontend/node duplicates fix (#78)
* removed add_node_mode variables and coupled functionality in hoverNode visnetwork listeners

* added newNodeLabel to both populateNode and populteNodeAt

* added newNodeLabel function to PDA_Visual.js

* reformat

* added logo, move right

* fixed logo ratios of the header with logo added

--- a/front/src/HeaderMenu.css
+++ b/front/src/HeaderMenu.css
@@ -22,3 +22,10 @@
 a.nav-link{
     color: #e25b4b !important;
 }
+#rflapsvg-logo{
+background-size: 20% 20% !important;
+}
+#logo-container{
+    min-width: 0% !important;
+    max-width: 20% !important;
+}
