Removed trash button

--- a/front/src/Visual.css
+++ b/front/src/Visual.css
@@ -81,3 +81,9 @@ canvas{
     outline:none;
 }
 
+font {
+
+    text-shadow: 0 0 2px #000; /* horizontal-offset vertical-offset 'blur' colour */
+    -moz-text-shadow: 0 0 2px #000;
+    -webkit-text-shadow: 0 0 2px #000;
+  }
